# rustDumping

./: README.md
advent_of_code_2020/: Cargo.toml
advent_of_code_2020/src/: main.rs
advent_of_code_2020/src/day1/: mod.rs
advent_of_code_2020/src/day10/: mod.rs
advent_of_code_2020/src/day11/: mod.rs
advent_of_code_2020/src/day12/: mod.rs
advent_of_code_2020/src/day13/: mod.rs
advent_of_code_2020/src/day13/data/: wikipedia.txt
advent_of_code_2020/src/day14/: mod.rs
advent_of_code_2020/src/day15/: mod.rs
advent_of_code_2020/src/day16/: mod.rs
advent_of_code_2020/src/day17/: mod.rs
advent_of_code_2020/src/day18/: mod.rs
advent_of_code_2020/src/day19/: day19.mjs  mod.rs
advent_of_code_2020/src/day2/: mod.rs
advent_of_code_2020/src/day20/: mod.rs  patterns.rs  reconstruct.rs  tile.rs  tileconnection.rs  tilehash.rs
advent_of_code_2020/src/day21/: mod.rs
advent_of_code_2020/src/day22/: mod.rs
advent_of_code_2020/src/day23/: mod.rs
advent_of_code_2020/src/day24/: mod.rs
advent_of_code_2020/src/day25/: mod.rs
advent_of_code_2020/src/day3/: mod.rs
advent_of_code_2020/src/day4/: mod.rs
advent_of_code_2020/src/day5/: mod.rs
advent_of_code_2020/src/day6/: mod.rs
advent_of_code_2020/src/day7/: mod.rs
advent_of_code_2020/src/day8/: mod.rs
advent_of_code_2020/src/day9/: mod.rs
advent_of_code_2020/src/template/: mod.rs
advent_of_code_2020/src/utils/: mod.rs
